test/sema/typeck/assign/reassign-self.dora
class Foo
impl Foo {
    fn f() { self = Foo(); }
}
